# RobotCleaningSimulation

./: .gitignore  CMakeLists.txt  Dokumentacja.md  README.md
Robot/: Charger.cpp  Charger.h  FileManager.hpp  Floor.cpp  Floor.h  Main.cpp  Map.cpp  Map.h  Messages.h  Obstacle.cpp  Obstacle.h  Robot  Robot.cpp  Robot.h  Robot.sln  Robot.vcxproj  Robot.vcxproj.filters  Simulation.cpp  Simulation.h  Tile.cpp  Tile.h  UnVisited.cpp  UnVisited.h  bigRoom,.txt  blocked.txt  exampleSave.txt  log.txt  t.txt  test.txt
Robot/Robot/x64/Debug/: Robot.exe.recipe  Robot.ilk  vc143.idb
Robot/Robot/x64/Debug/Robot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Robot.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/: CMakeLists.txt  FileManagerTests.cpp  MapTests.cpp  RobotTests.cpp  SimulationTests.cpp  TileTests.cpp
